# pyPCBtoSTEP

./: README.md  requirements.txt  setup.cfg
examples/: example.py
examples/exampleGerbers/: KicadCapBoard-B_Cu.gbr  KicadCapBoard-B_Mask.gbr  KicadCapBoard-B_Paste.gbr  KicadCapBoard-B_Silkscreen.gbr  KicadCapBoard-Edge_Cuts.gbr  KicadCapBoard-F_Cu.gbr  KicadCapBoard-F_Mask.gbr  KicadCapBoard-F_Paste.gbr  KicadCapBoard-F_Silkscreen.gbr
pyPCBtoSTEP/: __init__.py  __main__.py  board.py  main.py  util.py
pyPCBtoSTEP/gerbers/: import.py
