[metadata]
name = pyPCBtoSTEP 
version = 0.0.1
author = Alexander Bailey 
author_email = alexkingstonbailey@gmail.com
license = MIT
description = tools for converting gerber files to STEP 3D models for FEA etc
long_description = file: README.md
long_description_content_type = text/markdown
keywords = PCB, 3D, openSCAD
url = https://github.com/Kingston802/pyPCBtoSTEP
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Software Development
	Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
install_requires =
	requests>=2.27.1
python_requires = >=3.8
packages = pyPCBtoSTEP

[options.entry_points]
console_scripts =
	pyPCBtoSTEP = pyPCBtoSTEP.main:main

